# component-motherduck

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/check-version-change/: action.yml
.github/workflows/: common-component-workflow.yml  ex-motherduck.yml  push.yml  wr-motherduck.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json
components/ex-motherduck/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
components/ex-motherduck/component_config/: component_long_description.md  configRowSchema.json  configSchema.json  configuration_description.md  sourceCodeUrl.md
components/ex-motherduck/src/: component.py  configuration.py
components/ex-motherduck/tests/: test_component.py
components/wr-motherduck/: Dockerfile  docker-compose.yml  pyproject.toml
components/wr-motherduck/component_config/: configRowSchema.json  documentationUrl.md  licenseUrl.md
components/wr-motherduck/src/: component.py  configuration.py
components/wr-motherduck/src/client/: duck.py  storage_api.py
components/wr-motherduck/src/wr_motherduck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
components/wr-motherduck/tests/: test_component.py
src/: component.py  configuration.py
src/client/: duck.py
tests/: test_component.py
